--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@
 /* ------------------------------------- */
 
 * {
-    margin: 0;                  /*ezeket mindig érdemes beállítani!!!*/
+    margin: 0;                
     padding: 0;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -35,19 +35,13 @@ body {
 
 .row {
     max-width: 1140px;
-    margin: 0 auto;         /*ha középre akarjuk igazítani a tartalmat; nem kell mind a négy értéket 
-                            külön leírni, elég így is! */
-    
+    margin: 0 auto;        
 }
 
-section {
-    padding: 80px 0;
-}
+section { padding: 80px 0; }
 
-.box {
-    padding: 1%;
-    
-}
+.box { padding: 1%; }
+
 /* ------ HEADINGS ------ */
 
 h1, h2, h3 {
@@ -116,12 +110,9 @@ h3 {
     color: #e67e22;
     font-size: 100%;
     margin-right: 10px;
-    
-    /* Secrets to align text and icons */
     line-height: 120%;
     vertical-align: middle;
-    margin-top: -5px;
-    
+    margin-top: -5px;   
 }
 
 /* ------ LINKS ------ */
@@ -174,14 +165,10 @@ input[type=submit] {
 .btn:hover, 
 .btn:active,
 input[type=submit]:hover,
-input[type=submit]:active {
-    background-color: #cf6d17;
-}
+input[type=submit]:active { background-color: #cf6d17; }
 
 .btn-full:hover, 
-.btn-full:active, {
-    border: 1px solid #cf6d17;
-}
+.btn-full:active, { border: 1px solid #cf6d17; }
 
 .btn-ghost:hover, 
 .btn-ghost:active {
@@ -194,8 +181,8 @@ input[type=submit]:active {
 /* ------------------------------------- */
 
 header {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero.jpg);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero-min.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-min.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -211,13 +198,23 @@ header {
     transform: translate(-50%, -50%);
 }
 
-.logo {
+.logo,
+.logo-black {
     height: 100px;
     width: auto;
     float: left;
     margin-top: 20px;
 }
 
+.logo-black {
+    display: none;
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0;
+}
+
+/* Main navi */
 .main-nav {
     float: right;
     list-style: none;
@@ -242,25 +239,55 @@ header {
 }
 
 .main-nav li a:hover, 
-.main-nav li a:active {
-    border-bottom: 2px solid #e67e22; 
+.main-nav li a:active { border-bottom: 2px solid #e67e22; }
+
+/* Mobile navi */
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
 }
+
+.mobile-nav-icon i {
+    font-size: 200%;
+    color: #fff;
+}
+
+/* Sticky navi */
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+    box-shadow: 0 2px 2px #efefef;
+    z-index: 9999;
+}
+
+.sticky .main-nav { margin-top: 18px; }
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding: 16.5px 0;
+    color: #555;
+}
+
+.sticky .logo { display: none; }
+
+.sticky .logo-black { display: block; }
 
 /* ------------------------------------- */
 /* FEATURES */
 /* ------------------------------------- */
 
-.section-features .long-copy {
-    margin-bottom: 30px;
-}
+.section-features .long-copy { margin-bottom: 30px; }
 
 /* ------------------------------------- */
 /* MEALS */
 /* ------------------------------------- */
 
-.section-meals {
-    padding: 0;    
-}
+.section-meals { padding: 0; }
 
 .meals-showcase {
     list-style: none;
@@ -302,9 +329,7 @@ header {
 /* HOW IT WORKS */
 /* ------------------------------------- */
 
-.section-steps {
-    background-color: #f4f4f4;
-}
+.section-steps { background-color: #f4f4f4; }
 
 .steps-box:first-child {
     text-align: right;
@@ -314,21 +339,14 @@ header {
 
 .steps-box:last-child {
     padding-left: 3%;
-    margin-top: 70px;
-    
+    margin-top: 70px;    
 }
 
-.app-screen {
-    width: 40%;
-}
+.app-screen { width: 40%; }
 
-.work-step {
-    margin-bottom: 50px;
-}
+.work-step { margin-bottom: 50px; }
 
-.work-step:last-of-type {
-    margin-bottom: 80px;
-}
+.work-step:last-of-type { margin-bottom: 80px; }
 
 .work-step div {
     color: #e67e22;
@@ -341,14 +359,11 @@ header {
     padding: 5px;
     float: left;
     font-size: 150%;
-    margin-right: 25px;
-    
+    margin-right: 25px;   
 }
 
 .btn-app:link,
-.btn.app:visited {
-    border: 0;
-}
+.btn.app:visited { border: 0; }
 
 .btn-app img {
     height: 50px;
@@ -366,17 +381,15 @@ header {
     margin-bottom: 15px;
 }
 
-.city-feature {
-    margin-bottom: 5px;
-}
+.city-feature { margin-bottom: 5px; }
 
 /* ------------------------------------- */
 /* TESTIMONIALS */
 /* ------------------------------------- */
 
 .section-testimonials {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0,0,0, 0.8))), url(img/back-customers.jpg);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0,0,0, 0.8)), url(img/back-customers.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0,0,0, 0.8))), url(img/back-customers-min.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0,0,0, 0.8)), url(img/back-customers-min.jpg);
     background-size: cover;
     color: #fff;
     background-attachment: fixed;
@@ -417,9 +430,7 @@ cite img {
 /* SIGN UP */
 /* ------------------------------------- */
 
-.section-plans {
-    background-color: #f4f4f4;
-}
+.section-plans { background-color: #f4f4f4; }
 
 .plan-box {
     background-color: #fff;
@@ -458,13 +469,9 @@ cite img {
     font-weight: 300;
 }
 
-.plan-price-meal {
-    font-size: 80%;
-}
+.plan-price-meal { font-size: 80%; }
 
-.plan-box ul {
-    list-style: none;
-}
+.plan-box ul { list-style: none; }
 
 .plan-box li {
     padding: 5px, 0;
@@ -490,17 +497,11 @@ textarea {
     border: 1px solid #ccc;
 }
 
-textarea {
-    height: 100px;
-}
+textarea { height: 100px; }
 
-input[type=checkbox] {
-    margin: 10px 5px 10px 0;
-}
+input[type=checkbox] { margin: 10px 5px 10px 0; }
 
-*:focus {
-    outline: none;
-}
+*:focus { outline: none; }
 
 /* ------------------------------------- */
 /* FOOTER */
@@ -545,14 +546,10 @@ footer {
 }
 
 .footer-nav li a:hover,
-.footer-nav li a:active {
-    color: #ddd;   
-}
+.footer-nav li a:active { color: #ddd; }
 
 .social-links li a:link,
-.social-links li a:visited {
-    font-size: 160%;
-}
+.social-links li a:visited { font-size: 160%; }
 
 .ion-logo-facebook, 
 .ion-logo-twitter, 
@@ -562,25 +559,35 @@ footer {
     transition: color 0.2s;
 }
 
-.ion-logo-facebook:hover {
-    color: #3b5998;
-}
+.ion-logo-facebook:hover { color: #3b5998; }
 
-.ion-logo-twitter:hover {
-    color: #00aced;
-}
+.ion-logo-twitter:hover { color: #00aced; }
 
-.ion-logo-googleplus:hover {
-    color: #dd4b39;
-}
+.ion-logo-googleplus:hover { color: #dd4b39; }
 
-.ion-logo-instagram:hover {
-    color: #517fa4;
-}
+.ion-logo-instagram:hover { color: #517fa4; }
 
 footer p {
     color: #888;
     text-align: center;
     margin-top: 20px;
 }
-/*szín: #e67e22  */
+
+/* ------------------------------------- */
+/* ANIMATIONS */
+/* ------------------------------------- */
+
+.js--wp-1,
+.js--wp-2 {
+    opacity: 0;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.js--wp-4 {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.js--wp-1.animated,
+.js--wp-2.animated { opacity: 1; }
